--- a/clusters/argo-demo/helmreleases/examiner.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/examiner.helm-release.yaml
@@ -42,7 +42,7 @@ spec:
     httpAnalysis:
       enabled: true
     configuration: 
-        ECHO_VALUE: ⛈ ARGO is broken 🙁
+        ECHO_VALUE: ⛈ ARGO Rocks 🤘
         SERVER_ERROR_RATE: 100
         REQUEST_DELAY: 100..250
         FAILURE_LIMIT: 50%
