--- a/clusters/argo-demo/helmreleases/examiner-bg.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/examiner-bg.helm-release.yaml
@@ -40,7 +40,7 @@ spec:
     prometheusAnalysis:
       enabled: false
     configuration: 
-        ECHO_VALUE: Some error happened 🙁
+        ECHO_VALUE: ⛈ ARGO Rocks 🤘
         SERVER_ERROR_RATE: 100
         REQUEST_DELAY: 100..250
         FAILURE_LIMIT: 50%
