--- a/charts/examiner-bg/templates/deployment.yaml
+++ b/charts/examiner-bg/templates/deployment.yaml
@@ -24,9 +24,15 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          envFrom:
-            - configMapRef:
-                name: {{ include "name" . }}
+          env:
+            - name: ECHO_VALUE
+              value: "⛈ ARGO Rocks 🤘"
+            - name: SERVER_ERROR_RATE
+              value: 0
+            - name: REQUEST_DELAY
+              value: "100..250"
+            - name: FAILURE_LIMIT
+              value: "50%"
           ports:
             - name: http
               containerPort: {{ .Values.container.port }}
