--- a/charts/examiner-bg/templates/deployment.yaml
+++ b/charts/examiner-bg/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: ECHO_VALUE
-              value: "Something is broken 🙁"
+              value: "⛈ ARGO Rocks 🤘"
             - name: SERVER_ERROR_RATE
               value: 0
             - name: REQUEST_DELAY
