--- a/clusters/argo-demo/helmreleases/examiner-bg.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/examiner-bg.helm-release.yaml
@@ -1,41 +1,41 @@
----
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata:
-  name: examiner-bg
-  namespace: bg-demo
-spec:
-  releaseName: examiner
-  chart:
-    spec:
-      chart: ./charts/examiner-bg
-      sourceRef:
-        kind: GitRepository
-        name: flux-system
-        namespace: flux-system
-  interval: 1m
-  values:
-    replicaCount: 0
-    image:
-      repository: quay.io/heubeck/examiner
-      pullPolicy: IfNotPresent
-      tag: "1.6.5"
-    service:
-      type: ClusterIP
-      port: 80
-    container:
-      port: 8080
-    resources:
-      limits:
-        cpu: 100m
-        memory: 128Mi
-      requests:
-        cpu: 100m
-        memory: 128Mi
-    autoscaling:
-      enabled: true
-      minReplicas: 3
-      maxReplicas: 5
-      targetCPUUtilizationPercentage: 80
-    prometheusAnalysis:
-      enabled: false
+# ---
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: examiner-bg
+#   namespace: bg-demo
+# spec:
+#   releaseName: examiner
+#   chart:
+#     spec:
+#       chart: ./charts/examiner-bg
+#       sourceRef:
+#         kind: GitRepository
+#         name: flux-system
+#         namespace: flux-system
+#   interval: 1m
+#   values:
+#     replicaCount: 0
+#     image:
+#       repository: quay.io/heubeck/examiner
+#       pullPolicy: IfNotPresent
+#       tag: "1.6.5"
+#     service:
+#       type: ClusterIP
+#       port: 80
+#     container:
+#       port: 8080
+#     resources:
+#       limits:
+#         cpu: 100m
+#         memory: 128Mi
+#       requests:
+#         cpu: 100m
+#         memory: 128Mi
+#     autoscaling:
+#       enabled: true
+#       minReplicas: 3
+#       maxReplicas: 5
+#       targetCPUUtilizationPercentage: 80
+#     prometheusAnalysis:
+#       enabled: false
