--- a/charts/examiner-bg/templates/argo.rollout.yaml
+++ b/charts/examiner-bg/templates/argo.rollout.yaml
@@ -21,7 +21,7 @@ spec:
             - name: ECHO_VALUE
               value: "⛈ ARGO new Release 🤘"
             - name: SERVER_ERROR_RATE
-              value: 0
+              value: "0"
             - name: REQUEST_DELAY
               value: "100..250"
             - name: FAILURE_LIMIT
