--- a/charts/examiner-bg/templates/deployment.yaml
+++ b/charts/examiner-bg/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
             - name: ECHO_VALUE
               value: "⛈ ARGO Rocks 🤘"
             - name: SERVER_ERROR_RATE
-              value: 0
+              value: "0"
             - name: REQUEST_DELAY
               value: "100..250"
             - name: FAILURE_LIMIT
