--- a/clusters/argo-demo/helmreleases/verdaccio.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/verdaccio.helm-release.yaml
@@ -19,13 +19,9 @@ spec:
   values:
     ingress:
       enabled: true
-      annotations:
-            kubernetes.io/ingress.class: "nginx"
-      hosts: 
-        - host: verdaccio.test.local
-          paths:
-            - path: /
-              pathType: ImplementationSpecific
+      className: "nginx"
+      paths:
+        - /
     configmap: |
       # This is the config file used for the docker images
       # It allows all users to do anything, so don't use it on production systems.
