--- a/clusters/argo-demo/namespaces/verdaccio.namespace.yaml
+++ b/clusters/argo-demo/namespaces/verdaccio.namespace.yaml
@@ -1,5 +1,5 @@
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: verdaccio
+# ---
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: verdaccio
