--- a/clusters/argo-demo/helmreleases/ingress-nginx.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/ingress-nginx.helm-release.yaml
@@ -33,3 +33,5 @@ spec:
             targetPort: prometheus
     prometheus:
       create: true
+    annotations:
+      nginx.ingress.kubernetes.io/proxy-body-size: "0"
