--- a/clusters/argo-demo/helmreleases/ingress-nginx.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/ingress-nginx.helm-release.yaml
@@ -31,7 +31,8 @@ spec:
             port: 10254
             protocol: TCP
             targetPort: prometheus
+      service:
+        annotations:
+          nginx.ingress.kubernetes.io/proxy-body-size: "0"
     prometheus:
       create: true
-    annotations:
-      nginx.ingress.kubernetes.io/proxy-body-size: "0"
