Switched protocol for internal repos

--- a/clusters/argo-demo/helm-repositories/local.helm-repository.yaml
+++ b/clusters/argo-demo/helm-repositories/local.helm-repository.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m
-  url: https://docker-registry.docker-registry
+  url: http://docker-registry.docker-registry
