--- a/clusters/argo-demo/helmreleases/loki.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/loki.helm-release.yaml
@@ -1,19 +1,18 @@
----
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata:
-  name: loki
-  namespace: loki
-spec:
-  interval: 1m
-  chart:
-    spec:
-      chart: loki
-      version: 2.14.1
-      sourceRef:
-        kind: HelmRepository
-        name: grafana
-        namespace: flux-system
-      interval: 1m
-  values:
-   
+# ---
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: loki
+#   namespace: loki
+# spec:
+#   interval: 1m
+#   chart:
+#     spec:
+#       chart: loki
+#       version: 2.14.1
+#       sourceRef:
+#         kind: HelmRepository
+#         name: grafana
+#         namespace: flux-system
+#       interval: 1m
+#   values:
