--- a/clusters/argo-demo/helmreleases/prometheus.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/prometheus.helm-release.yaml
@@ -1,48 +1,48 @@
----
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata:
-  name: prometheus
-  namespace: prometheus
-spec:
-  interval: 10m
-  chart:
-    spec:
-      chart: kube-prometheus-stack
-      version: 39.6.0
-      sourceRef:
-        kind: HelmRepository
-        name: prometheus-community
-        namespace: flux-system
-      interval: 1m
-  values:
-    prometheus-node-exporter:
-      hostRootFsMount:
-        enabled: false
-    grafana:
-      service:
-        type: ClusterIP
-        port: 80
-      adminUser: admin
-      adminPassword: admin
-      ingress:
-        enabled: true
-        hosts: 
-          - grafana.test.local
-        path: /
-        annotations:
-          kubernetes.io/ingress.class: "nginx"
-    prometheus:
-      service:
-        type: ClusterIP
-        port: 80
-      ingress:
-        enabled: true
-        hosts: 
-          - prometheus.test.local
-        path: /
-        annotations:
-          kubernetes.io/ingress.class: "nginx"
-      prometheusSpec:
-        podMonitorSelectorNilUsesHelmValues: false
-        serviceMonitorSelectorNilUsesHelmValues: false
+# ---
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: prometheus
+#   namespace: prometheus
+# spec:
+#   interval: 10m
+#   chart:
+#     spec:
+#       chart: kube-prometheus-stack
+#       version: 39.6.0
+#       sourceRef:
+#         kind: HelmRepository
+#         name: prometheus-community
+#         namespace: flux-system
+#       interval: 1m
+#   values:
+#     prometheus-node-exporter:
+#       hostRootFsMount:
+#         enabled: false
+#     grafana:
+#       service:
+#         type: ClusterIP
+#         port: 80
+#       adminUser: admin
+#       adminPassword: admin
+#       ingress:
+#         enabled: true
+#         hosts:
+#           - grafana.test.local
+#         path: /
+#         annotations:
+#           kubernetes.io/ingress.class: "nginx"
+#     prometheus:
+#       service:
+#         type: ClusterIP
+#         port: 80
+#       ingress:
+#         enabled: true
+#         hosts:
+#           - prometheus.test.local
+#         path: /
+#         annotations:
+#           kubernetes.io/ingress.class: "nginx"
+#       prometheusSpec:
+#         podMonitorSelectorNilUsesHelmValues: false
+#         serviceMonitorSelectorNilUsesHelmValues: false
