--- a/clusters/argo-demo/helmreleases/promtail.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/promtail.helm-release.yaml
@@ -1,23 +1,23 @@
----
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata:
-  name: promtail
-  namespace: loki
-spec:
-  interval: 1m
-  chart:
-    spec:
-      chart: promtail
-      version: 6.2.3
-      sourceRef:
-        kind: HelmRepository
-        name: grafana
-        namespace: flux-system
-      interval: 1m
-  values:
-    config:
-      clients:
-        - url: http://loki.loki:3100/loki/api/v1/push
-          external_labels:
-            cluster: argo-demo
+# ---
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: promtail
+#   namespace: loki
+# spec:
+#   interval: 1m
+#   chart:
+#     spec:
+#       chart: promtail
+#       version: 6.2.3
+#       sourceRef:
+#         kind: HelmRepository
+#         name: grafana
+#         namespace: flux-system
+#       interval: 1m
+#   values:
+#     config:
+#       clients:
+#         - url: http://loki.loki:3100/loki/api/v1/push
+#           external_labels:
+#             cluster: argo-demo
