--- a/clusters/argo-demo/helmreleases/twuni.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/twuni.helm-release.yaml
@@ -1,26 +1,26 @@
----
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata:
-  name: docker-registry
-  namespace: docker-registry
-spec:
-  interval: 10m
-  chart:
-    spec:
-      chart: docker-registry
-      version: 2.2.2
-      sourceRef:
-        kind: HelmRepository
-        name: twuni
-        namespace: flux-system
-      interval: 10m
-  values:
-    ingress:
-      enabled: true
-      className: "nginx"
-      path: /
-      hosts: 
-        - docker-registry.test.local
-      annotations:
-        nginx.ingress.kubernetes.io/proxy-body-size: "0"
+# ---
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: docker-registry
+#   namespace: docker-registry
+# spec:
+#   interval: 10m
+#   chart:
+#     spec:
+#       chart: docker-registry
+#       version: 2.2.2
+#       sourceRef:
+#         kind: HelmRepository
+#         name: twuni
+#         namespace: flux-system
+#       interval: 10m
+#   values:
+#     ingress:
+#       enabled: true
+#       className: "nginx"
+#       path: /
+#       hosts:
+#         - docker-registry.test.local
+#       annotations:
+#         nginx.ingress.kubernetes.io/proxy-body-size: "0"
