--- a/clusters/argo-demo/helmreleases/unleash.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/unleash.helm-release.yaml
@@ -1,28 +1,27 @@
----
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata:
-  name: unleash
-  namespace: unleash
-spec:
-  interval: 1m
-  chart:
-    spec:
-      chart: unleash
-      version: 2.6.0
-      sourceRef:
-        kind: HelmRepository
-        name: unleash
-        namespace: flux-system
-      interval: 1m
-  values:
-    ingress:
-      enabled: true
-      annotations:
-            kubernetes.io/ingress.class: "nginx"
-      hosts: 
-        - host: unleash.test.local
-          paths:
-            - path: /
-              pathType: ImplementationSpecific
-          
+# ---
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: unleash
+#   namespace: unleash
+# spec:
+#   interval: 1m
+#   chart:
+#     spec:
+#       chart: unleash
+#       version: 2.6.0
+#       sourceRef:
+#         kind: HelmRepository
+#         name: unleash
+#         namespace: flux-system
+#       interval: 1m
+#   values:
+#     ingress:
+#       enabled: true
+#       annotations:
+#             kubernetes.io/ingress.class: "nginx"
+#       hosts:
+#         - host: unleash.test.local
+#           paths:
+#             - path: /
+#               pathType: ImplementationSpecific
