--- a/clusters/argo-demo/helmreleases/fission.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/fission.helm-release.yaml
@@ -8,8 +8,8 @@ spec:
   interval: 10m
   chart:
     spec:
-      chart: fission
-      version: latest
+      chart: fission-all
+      version: 1.20.1
       sourceRef:
         kind: HelmRepository
         name: fission
