--- a/clusters/argo-demo/helmreleases/ingress-nginx.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/ingress-nginx.helm-release.yaml
@@ -18,18 +18,18 @@ spec:
   values:
     controller:
       replicaCount: 1
-      metrics:
-        enabled: true
-        serviceMonitor:
-          enabled: true
-        service:
-          annotations:
-            prometheus.io/port: "10254"
-            prometheus.io/scrape: "true"
-          ports:
-          - name: prometheus
-            port: 10254
-            protocol: TCP
-            targetPort: prometheus
-    prometheus:
-      create: true
+      # metrics:
+      #   enabled: true
+      #   serviceMonitor:
+      #     enabled: true
+      #   service:
+    #       annotations:
+    #         prometheus.io/port: "10254"
+    #         prometheus.io/scrape: "true"
+    #       ports:
+    #       - name: prometheus
+    #         port: 10254
+    #         protocol: TCP
+    #         targetPort: prometheus
+    # prometheus:
+    #   create: true
