--- a/clusters/argo-demo/helmreleases/fission.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/fission.helm-release.yaml
@@ -16,5 +16,5 @@ spec:
         namespace: flux-system
       interval: 10m
   values:
-    serviceType: NodePort
-    routerServiceType: NodePort
+    serviceType: LoadBalancer
+    routerServiceType: LoadBalancer
