Changed chart name

--- a/clusters/argo-demo/helmreleases/activepieces.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/activepieces.helm-release.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 10m
   chart:
     spec:
-      chart: activepieces
+      chart: meyercharts/activepieces
       version: 0.1.6
       sourceRef:
         kind: HelmRepository
